force-app/main/default/objects/SAJ_Analyze_Job_Summary__c/SAJ_Analyze_Job_Summary__c.object-meta.xml
<CustomObject>
    <label>Analyze Job Summary</label>
    <nameField>
        <label>Analyze Job Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Analyze Job Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>