force-app/main/default/objects/SAJ_Analyze_Job_Summary__c/fields/SAJ_Completed__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>