force-app/main/default/objects/SAJ_Analyze_Job_Summary__c/fields/SAJ_Message__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>