force-app/main/default/objects/SAJ_Analyze_Job_Summary__c/fields/SAJ_Short_Message__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Short_Message__c</fullName>
    <label>Short Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>